# cassiopeia-feed-task

./: .gitignore  README.md  old_yml_catalog.xml  pyproject.toml  run.py  yml_catalog.xml
pytest_reports/: report.html
src/feed/: __init__.py  constants.py  data.py  feed_task.py  utils.py  views.py  xml_builder.py
tests/: conftest.py  test_integration.py  test_utils.py
