[project]
name = "cassiopeia-feed-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.6",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-deadfixtures>=3.1.0",
    "pytest-html>=4.2.0",
    "ruff>=0.15.18",
]

[tool.ruff]
src = ["src", "."]
target-version = "py313"
line-length = 88
preview = true
exclude = [
    ".mypy_cache",
    ".pytest_cache",
    ".pyenv",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "__pycache__",
    "alembic",
]

[tool.ruff.lint]
select = [
    "E",        # pycodestyle errors - PEP 8 style errors
    "W",        # pycodestyle warnings - PEP 8 style warnings
    "F",        # Pyflakes - static analysis (undefined variables, imports)
    "I",        # isort - import sorting and organization
    "B",        # flake8-bugbear - potential bugs and bad practices
    "C4",       # flake8-comprehensions - optimize list/dict/set comprehensions
    "T20",      # flake8-print - warns about print/debug statements in code
    "SIM",      # flake8-simplify - suggests code simplifications (if/else, loops)
    "RUF",      # Ruff-specific rules
    "Q",        # flake8-quotes - checks quote consistency
    "UP",       # pyupgrade - suggests syntax updates for modern Python
    "ARG",      # flake8-unused-arguments - finds unused function arguments
    "D",        # pydocstyle - checks docstring style
    "A",        # flake8-builtins - warns about using built-in names
    "N",        # pep8-naming - checks naming conventions (CamelCase for classes)
    "C90",      # mccabe - checks code complexity
    "PTH",      # flake8-use-pathlib - recommends pathlib over os.path
    "PLE",      # Pylint errors
    "PLW",      # Pylint warnings
    "ASYNC",    # flake8-async - checks async code
    "TID",      # flake8-tidy-imports - helps with import structure
    "TCH",      # flake8-type-checking - separates type imports (speeds up startup)
    "DTZ",      # flake8-datetimez - forbids datetime without timezone (critical for DB)
    "ISC",      # flake8-implicit-str-concat - implicit string concat errors
    "BLE",      # flake8-blind-except - forbids bare 'except:'
    "S",        # Bandit - security checks
    "LOG",      # flake8-logging - proper logging practices
    "PERF",     # Perflint - performance checks
    "ERA",      # Eradicate - removes commented-out code
    "ANN",      # flake8-annotations - checks type annotations
]
ignore = [
    "RUF002",   # Docstring contains ambiguous cirilic symbols
    "RUF001",
    "RUF003",
    "S101",     # Allow asserts for pytest
    "D100",     # Missing docstring in public module
    "D104",     # Missing docstring in public package
#    "S101",     # Allow asserts for pytest
#    "ISC001",   # Conflict with formatter
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 10

# [tool.ruff.lint.flake8-builtins]
# builtins-ignorelist = ["id", "type"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 72 # Отдельный лимит для docstrings согласно PEP8

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/feed/views.py" = ["ARG001"]

# [tool.ruff.lint.pylint]
# allow-dunder-method-names = ["__tablename__", "__table_args__"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.mypy]
python_version = "3.13"
strict = true

# --- Files and Scopes ---
mypy_path = "src"
files = ["."]                   

exclude = [".venv",]
ignore_missing_imports = true    # Prevent errors from third-party libraries that don't provide type hints

# --- Output and Readability ---
pretty = true                   # Pretty-print output
show_error_codes = true         # Show specific error codes (e.g., [attr-defined]) for easy ignoring
show_column_numbers = true      # Include column numbers in error messages for better IDE navigation

# --- Strictness and Security ---
disallow_untyped_calls = true   # Error when calling a function without type annotations
disallow_untyped_defs = true    # Require type annotations for all function definitions
disallow_incomplete_defs = true # Error if a function has partial type annotations (missing some args or return)
check_untyped_defs = true       # Check the body of functions even if they don't have annotations

# --- Code Quality Warnings ---
warn_redundant_casts = true     # Warn if a type cast (cast()) is not actually needed
warn_unused_ignores = true      # Warn about unnecessary "# type: ignore" comments
warn_no_return = true           # Warn about functions that don't explicitly return
warn_unreachable = true         # Warn about code that will never be executed

[tool.django-stubs]
django_settings_module = "cassiopeia-feed-task.settings"


[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
addopts = "-ra -vv --tb=short --cov=src --cov-report=term-missing --cov-report=html:pytest_reports/coverage --html=pytest_reports/report.html --self-contained-html"
python_files = "test_*.py"

[tool.coverage.run]
source = ["src"]
omit = [
            "tests/*", 
            "**/__init__.py",
            "src/feed/views.py",
        ]

[tool.coverage.report]
show_missing = true
fail_under = 80
